--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     },
     "dependencies": {
         "i18next": "^24.2.1",
+        "jwt-decode": "^4.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-i18next": "^15.4.0"
+        "react-i18next": "^15.4.0",
+        "usehooks-ts": "^3.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
