--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^15.4.0",
+        "react-router": "^7.1.3",
         "usehooks-ts": "^3.1.0"
     },
     "devDependencies": {
