--- a/package.json
+++ b/package.json
@@ -19,18 +19,22 @@
         "usehooks-ts": "^3.1.0"
     },
     "devDependencies": {
+        "@eslint/compat": "^1.2.5",
         "@eslint/js": "^9.19.0",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
+        "@typescript-eslint/eslint-plugin": "^8.21.0",
+        "@typescript-eslint/parser": "^8.21.0",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-react-hooks": "^5.0.0",
-        "eslint-plugin-react-refresh": "^0.4.16",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.18",
         "globals": "^15.14.0",
         "prettier": "3.4.2",
         "typescript": "~5.6.2",
-        "typescript-eslint": "^8.18.2",
+        "typescript-eslint": "^8.21.0",
         "vite": "^6.0.5"
     }
 }
