--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: npm ci
+      - name: List installed npm packages
+        run: npm list --depth=0
 
   # Job 2: Lint Project (runs in parallel with TypeScript and Prettier checks)
   lint:
