--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
         id: cache-deps
         uses: actions/cache@v4  # Updated to v4
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json')-key }}
           restore-keys: |
             ${{ runner.os }}-node-
 
@@ -49,7 +49,7 @@ jobs:
       - name: Use shared dependencies cache
         uses: actions/cache@v4  # Updated to v4
         with:
-          path: ~/.npm
+          path: node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
       - name: Run ESLint
@@ -66,7 +66,7 @@ jobs:
       - name: Use shared dependencies cache
         uses: actions/cache@v4  # Updated to v4
         with:
-          path: ~/.npm
+          path: node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
       - name: Check TypeScript
@@ -83,7 +83,7 @@ jobs:
       - name: Use shared dependencies cache
         uses: actions/cache@v4  # Updated to v4
         with:
-          path: ~/.npm
+          path: node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
       - name: Run Prettier Check
@@ -100,7 +100,7 @@ jobs:
       - name: Use shared dependencies cache
         uses: actions/cache@v4  # Updated to v4
         with:
-          path: ~/.npm
+          path: node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
       - name: Build the project
