--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev": "vite",
         "build": "tsc -b && vite build --mode prod",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest",
+        "test:watch": "vitest --watch"
     },
     "dependencies": {
         "i18next": "^24.2.1",
@@ -21,6 +23,8 @@
     "devDependencies": {
         "@eslint/compat": "^1.2.5",
         "@eslint/js": "^9.19.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
@@ -30,9 +34,12 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.18",
         "globals": "^15.14.0",
+        "jsdom": "^26.0.0",
+        "msw": "^2.7.0",
         "prettier": "3.4.2",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.21.0",
-        "vite": "^6.0.5"
+        "vite": "^6.0.5",
+        "vitest": "^3.0.4"
     }
 }
