--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "test:watch": "vitest --watch"
     },
     "dependencies": {
+        "@lexical/react": "^0.24.0",
         "i18next": "^24.2.1",
         "jwt-decode": "^4.0.0",
+        "lexical": "^0.24.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^15.4.0",
