Update translations to be more sclable.

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "type": "module",
     "scripts": {
         "pre": "node generate-translation.mjs",
-        "dev": "npm run pre && vite",
-        "build": "npm run pre && tsc -b && vite build --mode prod",
-        "lint": "npm run pre && eslint .",
-        "preview": "npm run pre && vite preview",
-        "test": "npm run pre && vitest",
-        "test:watch": "npm run pre && vitest --watch"
+        "dev": "vite",
+        "build": "tsc -b && vite build --mode prod",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "test": "vitest",
+        "test:watch": "vitest --watch"
     },
     "dependencies": {
         "@lexical/react": "^0.24.0",
