--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc -b && vite build --mode prod",
+        "build": "tsc -b && vite build --mode production",
         "lint": "eslint .",
         "preview": "vite preview",
         "test": "vitest",
