--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: CI Workflow
 
 on:
+  push:
+    branches:
+      - spike-deployment
   pull_request:
     branches: 
       - main        # Run on pull requests targeting main branch
@@ -118,3 +121,25 @@ jobs:
 
       - name: Build the project
         run: npx vite build --mode prod
+
+  # Job 6: Register container        
+  build-and-push:
+    needs: [build]  # Run only after the build passes
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build Docker image
+        run: |
+          docker build -t ghcr.io/${{ github.repository_owner }}/qa-platform-client:pr-${{ github.event.pull_request.number }} .
+
+      - name: Push Docker image to GitHub Container Registry
+        run: |
+          docker push ghcr.io/${{ github.repository_owner }}/qa-platform-client:pr-${{ github.event.pull_request.number }}
+      
