--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,11 +135,13 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+      - name: Determine Image Tag
+        run: echo "IMAGE_TAG=pr-${{ github.event.pull_request.number || github.sha }}" >> $GITHUB_ENV
+
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/qa-platform-client:pr-${{ github.event.pull_request.number }} .
+          docker build -t ghcr.io/${{ github.repository_owner }}/qa-platform-client:${{ env.IMAGE_TAG }} .
 
       - name: Push Docker image to GitHub Container Registry
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/qa-platform-client:pr-${{ github.event.pull_request.number }}
-      
+          docker push ghcr.io/${{ github.repository_owner }}/qa-platform-client:${{ env.IMAGE_TAG }}
