--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # Env for production
 # VITE_BASE_URL=http://localhost:5084/api
-VITE_BASE_URL=https://qa-api.martelleur.online/api
+VITE_BASE_URL=https://qa-api.stridsmaskinerna.online/api
